<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/checkout_sv"
    tools:context=".CheckoutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/checkout_LL"
        >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:id="@+id/checkout_bar_layout"
        android:fitsSystemWindows="true"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <FrameLayout
            android:id="@+id/photo_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/photo_background_protection" />

            <ImageView
                android:id="@+id/checkout_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cout"
                android:scaleType="centerCrop"
                android:contentDescription="@string/backGround" />

            <!-- gradient scrim -->

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_scrim" />



        </FrameLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/checkout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:textSize="20sp"
        android:padding="4dp"
        android:gravity="center"
        android:id="@+id/tv"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:padding="8dp"
        >
    <Button
        android:id="@+id/button_id"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/order" />
    <Button
        android:id="@+id/orderAc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/order_history" />
    <Button
        android:id="@+id/find"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/find_us" />

    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/number"
            android:id="@+id/Contact"/>
    </LinearLayout>
</ScrollView>