<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/app_bar_layout"
        android:fitsSystemWindows="true"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:targetApi="lollipop">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/photo_background_protection" />

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/backGround" />

                <!-- gradient scrim -->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_scrim" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainLL"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/detail_inner_horiz_margin"
                    android:paddingEnd="@dimen/detail_inner_horiz_margin"
                    android:paddingTop="@dimen/detail_metabar_vert_padding"
                    android:paddingBottom="@dimen/detail_metabar_vert_padding"
                    android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
                    android:paddingLeft="@dimen/detail_inner_horiz_margin"
                    android:paddingRight="@dimen/detail_inner_horiz_margin"

                    >

                    <ImageView
                        android:id="@+id/pizza_logo"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pizzahouselogo"
                        android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                        android:contentDescription="@string/backGroundLogo" />


                </LinearLayout>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/NestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearOfHope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/next"
                android:text="@string/Checkout"/>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/wifi_error"
                android:gravity="center"
                android:id="@+id/empty_State"
                android:textSize="40sp"

                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        app:fabSize="normal"
        app:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        app:layout_anchor="@id/app_bar_layout"
        android:id="@+id/call_fab"
        android:src="@drawable/ic_call_black_24dp"
        app:layout_anchorGravity="bottom|end"
        android:contentDescription="@string/makeCall"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.design.widget.CoordinatorLayout>